--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
       <address>
         <strong>Contato:</strong> <a href="mailto:contato@vidamoderna.com">contato@vidamoderna.com</a>
       </address>
-      <small>&copy; 2025 Vida Moderna. Feito por IA e Guilherme Ferreira | Imagens: Unsplash</small>
+      <small>&copy; 2025 Vida Moderna. Feito por Guilherme Ferreira | Imagens: Unsplash</small>
     </footer>
   </main>
   <script src="js/main.js"></script>
